@@ -345,7 +345,7 @@ static int newcamd_login(struct camd *c) {
 
 static int newcamd_connect(struct camd *c) {
 	if (c->server_fd < 0) {
-		c->server_fd = camd_tcp_connect(c->server_addr, c->server_port);
+		c->server_fd = connect_client(SOCK_STREAM, c->hostname, c->service);
 		if (!newcamd_login(c)) {
 			shutdown_fd(&c->server_fd);
 			return -1;
