@@ -17,7 +17,7 @@
 
 #include "data.h"
 
-int						camd_tcp_connect	(struct in_addr ip, int port);
+int connect_client							(int socktype, const char *hostname, const char *service);
 
 struct camd_msg *		camd_msg_alloc		(enum msg_type msg_type, uint16_t ca_id, uint16_t service_id, uint8_t *data, uint8_t data_len);
 void					camd_msg_free   	(struct camd_msg **pmsg);
