@@ -16,6 +16,7 @@
 #define UTIL_H
 
 #include <inttypes.h>
+#include <arpa/inet.h>
 
 unsigned long crc32(unsigned long crc, const uint8_t *buf, unsigned int len);
 int32_t boundary(int32_t exp, int32_t n);
@@ -26,5 +27,6 @@ void set_thread_name(char *thread_name);
 int decode_hex_string(char *hex, uint8_t *bin, int asc_len);
 int64_t get_time(void);
 unsigned int file_hex2buf(char *filename, uint8_t *buffer, unsigned int buf_size);
+char *my_inet_ntop(int family, struct sockaddr *addr, char *dest, int dest_len);
 
 #endif
